<package>
  <name>v_msgs</name>
  <version>1.12.5</version>
  <description>
    v_msgs/Marker is used to transfer visualization_msg/Marker
    from old version
  </description>
  <maintainer email="horae@horae.com">Horae</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/visualization_msgs</url>
  <author email="clarence@horae.com">Clarence</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
